--- a/src/main/resources/static/html/singin.html
+++ b/src/main/resources/static/html/singin.html
@@ -8,13 +8,14 @@
 <link href="../css/material-components-web.css" rel="stylesheet">
 <link href="../css/custom.css" rel="stylesheet">
 <title>Connect</title>
+	<link rel="icon" type="image/png" href="../images/appIcon.ico">
 </head>
 <body class="mdc-typography">
 	<header class="mdc-top-app-bar">
 		<nav class="mdc-top-app-bar__row">
 			<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
 				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" aria-label="Open navigation menu">menu</button>
-				<span class="mdc-top-app-bar__title">Page title</span>
+				<span class="mdc-top-app-bar__title">Partage</span>
 			</section>
 			<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
 				<button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Favorite">favorite</button>
@@ -31,21 +32,23 @@
 
 				<div class="mdc-card partage-auth-form">
 
-					<label for="email" class="partage-auth-label">Email</label> <input type="email" id="email" name="email" maxlength="100" required>
+					<label for="email" class="label-inline-block">Email</label>
+					<input type="email" id="email" name="email" maxlength="100" required>
 
-					<div class="partage-auth-double-label">
-						<label for="pass">Password</label> <a href="">Forgot password ?</a>
+					<div class="label-inline-block partage-signin-password-label">
+						<label for="pass">Password</label> <a href="password-reset.html">Forgot password ?</a>
 					</div>
 					<input type="password" id="pass" name="pass">
+
 					<div class="partage-auth-button-box">
-						<button type="submit" class="mdc-button mdc-button--unelevated partage-auth-button-submit">
+						<button type="submit" class="mdc-button mdc-button--unelevated button-rounded">
 							<span class="mdc-button__ripple"></span> Sign in
 						</button>
 					</div>
 				</div>
-				
+
 				<div class="mdc-card partage-auth-invite">
-					<p>New? <a href="">Create an account</a> </p>
+					<p>New? <a href="subscribe.html">Create an account</a> </p>
 				</div>
 			</div>
 		</form>
