--- a/src/main/resources/static/html/password-reset.html
+++ b/src/main/resources/static/html/password-reset.html
@@ -30,26 +30,28 @@
         </section>
     </nav>
 </header>
-<main>
-    <form method="post">
-        <div class="partage-auth">
+<main class="main-container">
+    <div class="content-column">
 
-            <h1>Reset your password</h1>
+        <h1 class="align-center">Reset your password</h1>
+        <form method="post">
+            <div class="partage-auth">
 
-            <div class="mdc-card partage-auth-form">
-
-                <label for="email" class="label-inline-block">Email</label>
-                <input type="email" id="email" name="email" maxlength="100" required>
-                <span class="input-info">Enter your user account's verified email address and we will send you a password reset link.</span>
-
-                <div class="partage-auth-button-box">
-                    <button type="submit" class="mdc-button mdc-button--unelevated button-rounded">
-                        <span class="mdc-button__ripple"></span> Send email
-                    </button>
+                <div class="mdc-card partage-auth-form">
+                    <div class="input-group-column">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" maxlength="100" required>
+                        <span class="input-info">Enter your user account's verified email address and we will send you a password reset link.</span>
+                    </div>
+                    <div class="partage-auth-button-box">
+                        <button type="submit" class="mdc-button mdc-button--unelevated button-rounded">
+                            <span class="mdc-button__ripple"></span> Send email
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </main>
 </body>
 </html>
