--- a/src/main/resources/static/html/singin.html
+++ b/src/main/resources/static/html/singin.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-<link href="../css/main.css" rel="stylesheet">
-<link href="../css/material-components-web.css" rel="stylesheet">
-<link href="../css/custom.css" rel="stylesheet">
-<title>Connect</title>
-	<link rel="icon" type="image/png" href="../images/appIcon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+          rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
+    <link href="../css/material-components-web.css" rel="stylesheet">
+    <link href="../css/custom.css" rel="stylesheet">
+    <title>Connect</title>
+    <link rel="icon" type="image/png" href="../images/appIcon.ico">
 </head>
 <body class="mdc-typography">
-	<header class="mdc-top-app-bar">
-		<nav class="mdc-top-app-bar__row">
-			<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" aria-label="Open navigation menu">menu</button>
-				<span class="mdc-top-app-bar__title">Partage</span>
-			</section>
-			<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-				<button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Favorite">favorite</button>
-				<button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Search">search</button>
-				<button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Options">more_vert</button>
-			</section>
-		</nav>
-	</header>
-	<main>
-		<form method="post">
-			<div class="partage-auth">
+<main class="main-container">
 
-				<h1>Sign in</h1>
+    <div class="content-column">
 
-				<div class="mdc-card partage-auth-form">
+        <h1 class="align-center">Sign in</h1>
 
-					<label for="email" class="label-inline-block">Email</label>
-					<input type="email" id="email" name="email" maxlength="100" required>
+        <form method="post">
+            <div class="partage-auth">
+                <div class="mdc-card partage-auth-form">
 
-					<div class="label-inline-block partage-signin-password-label">
-						<label for="pass">Password</label> <a href="password-reset.html">Forgot password ?</a>
-					</div>
-					<input type="password" id="pass" name="pass">
+                    <div class="input-group-column">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" maxlength="100" required>
+                    </div>
+                    <div class="input-group-column">
+                        <div class="partage-signin-password-label">
+                            <label for="pass">Password</label> <a href="password-reset.html">Forgot password ?</a>
+                        </div>
+                        <input type="password" id="pass" name="pass">
+                    </div>
 
-					<div class="partage-auth-button-box">
-						<button type="submit" class="mdc-button mdc-button--unelevated button-rounded">
-							<span class="mdc-button__ripple"></span> Sign in
-						</button>
-					</div>
-				</div>
+                    <div class="partage-auth-button-box">
+                        <button type="submit" class="mdc-button mdc-button--unelevated button-rounded">
+                            <span class="mdc-button__ripple"></span> Sign in
+                        </button>
+                    </div>
+                </div>
 
-				<div class="mdc-card partage-auth-invite">
-					<p>New? <a href="subscribe.html">Create an account</a> </p>
-				</div>
-			</div>
-		</form>
-	</main>
+                <div class="mdc-card partage-auth-invite">
+                    <p>New? <a href="subscribe.html">Create an account</a></p>
+                </div>
+            </div>
+        </form>
+    </div>
+</main>
 </body>
 </html>
