--- a/src/main/resources/static/html/settings.html
+++ b/src/main/resources/static/html/settings.html
@@ -16,7 +16,7 @@
     <nav class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             <a href="home.html" class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
-                    aria-label="Open navigation menu">arrow_back
+               aria-label="Open navigation menu">arrow_back
             </a>
         </section>
         <section class="mdc-top-app-bar__section partage-top-app-bar__section--align-center">
@@ -46,7 +46,14 @@
                     <option value="USD">US Dollar (USD)</option>
                 </select>
             </div>
+            <div class="input-group-column">
+                    <button class="mdc-button mdc-button--unelevated button-rounded button-size-auto" id="btn-form-main-submit" type="submit">
+                        <span class="mdc-button__ripple"></span>
+                        OK
+                    </button>
+            </div>
             <div class="divider"></div>
+
 
             <h3>Account</h3>
 
