--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
           rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
-    <link href="../css/material-components-web.css" rel="stylesheet">
-    <link href="../css/custom.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../images/appIcon.ico">
     <script src="../js/mdc.menu.js"></script>
     <script src="../js/mdc.dialog.js"></script>
@@ -17,9 +15,9 @@
 <header class="mdc-top-app-bar">
     <nav class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-            <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
-                    aria-label="Open navigation menu">menu
-            </button>
+<!--            <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"-->
+<!--                    aria-label="Open navigation menu">menu-->
+<!--            </button>-->
         </section>
         <section class="mdc-top-app-bar__section partage-top-app-bar__section--align-center">
             <span class="mdc-top-app-bar__title">Your boards</span>
