--- a/src/main/resources/static/html/participants.html
+++ b/src/main/resources/static/html/participants.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
           rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
-    <link href="../css/material-components-web.css" rel="stylesheet">
-    <link href="../css/custom.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../images/appIcon.ico">
     <title>Participants</title>
 </head>
